--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,19 @@
   color: #61dafb;
 }
 
+.toolbar{
+  width: "fit-content";
+  position: fixed;
+  z-index: 1;
+  top: 20px;
+  left: 10px;
+  overflow-x: hidden;
+  padding: 8px 0;
+}
+.canvas{
+
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
